#-------------------------------------------------------------------------
#   rxtx is a native interface to serial ports in java.
#   Copyright 1997, 1998, 1999 by Trent Jarvi jarvi@ezlink.com.
#
#   This library is free software; you can redistribute it and/or
#   modify it under the terms of the GNU Library General Public
#   License as published by the Free Software Foundation; either
#   version 2 of the License, or (at your option) any later version.
#
#   This library is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#   Library General Public License for more details.
#
#   You should have received a copy of the GNU Library General Public
#   License along with this library; if not, write to the Free
#   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#-------------------------------------------------------------------------
AC_INIT(src/SerialImp.c)
AM_CONFIG_HEADER(config.h)
AC_CANONICAL_SYSTEM
AC_MSG_WARN(Trying libtool.  If the following fails install libtool)
AM_PROG_LIBTOOL
AM_INIT_AUTOMAKE(Serial,1.2.10)
AC_PROG_CC
AC_CHECK_HEADERS(fcntl.h)
AC_CHECK_HEADERS(sys/fcntl.h)
AC_CHECK_HEADERS(sys/file.h)
AC_CHECK_HEADERS(sys/signal.h)
AC_CHECK_HEADERS(termios.h)
AC_PROG_GCC_TRADITIONAL
AC_SUBST(JAVAINCLUDE)
AC_SUBST(JAVANATINC)
AC_SUBST(JCLASSPATH)
AC_SUBST(TOP)
AC_SUBST(JPATH)
AC_SUBST(TARGETLIB)
AC_SUBST(LDFLAG)
AC_SUBST(CFLAGS)
AC_SUBST(VERBOSE_IOEXCEPTIONS)
AC_SUBST(THREAD_FLAG)
AC_SUBST(IDENTIFIERS)
if test "$CC" = "gcc"; then
        CFLAGS="$CFLAGS"
fi
if test "$CC" = "egcs"; then
        CFLAGS="$CFLAGS"
fi
[case "$host_os" in
	*-gnu)
	CFLAGS="$CFLAGS -ansi";;
	*);;
esac]
TOP="`pwd`"
#	IDENTIFIERS="TEST"
AC_ARG_ENABLE(RXTXIDENT,
   [  --enable-RXTXIDENT      RXTXIDENT support (experimental) [default=no]], echo $enable_RXTXIDENT, enable_RXTXIDENT="no")
   if test x$enable_RXTXIDENT = xyes; then  
	IDENTIFIERS="\$(TOP)/gnu/io/CommPortIdentifier.class \$(TOP)/gnu/io/CommPortEnumerator.class \$(TOP)/gnu/io/CpoList.class \$(TOP)/gnu/io/CpoListEntry.class \$(TOP)/gnu/io/OwnershipEventThread.class"
   fi
AC_ARG_ENABLE(PRINTER,
   [  --enable-PRINTER        PRINTER support (experimental) [default=no]], echo $enable_PRINTER, enable_PRINTER="no")
   if test x$enable_PRINTER = xyes; then  
	TARGETLIB="\$(TOP)/\$(target_alias)/libSerial.la \$(TOP)/\$(target_alias)/libParallel.la"
   else
	TARGETLIB="\$(TOP)/\$(target_alias)/libSerial.la"
   fi
#AC_ARG_ENABLE(VERBOSE,
#   [  --enable-VERBOSE        more verbose native io messages [default=yes]],echo $enable_VERBOSE, enable_VERBOSE="yes")
#   if test x$enable_VERBOSE = xno; then 
#      VERBOSE_IOEXCEPTIONS="-DNO_VERBOSE_IOEXCEPTIONS"
#   fi
   if test "$CC" = "gcc"; then
      CFLAGS="$CFLAGS -D_POSIX_SOURCE -D_BSD_SOURCE"
   else
      [case "$host_os" in
         irix*)
            CFLAGS="$CFLAGS -D_NO_POSIX=1 -D_NO_XOPEN4=1";;
         *);;
      esac]
   fi
AC_ARG_ENABLE(NATIVETHREADS,
   [  --enable-NATIVETHREADS  Use jdk native-threads [default=no]], echo $enable_NATIVETHREADS, enable_NATIVETHREADS="no")
   if test x$enable_NATIVETHREADS = xyes; then 
      THREAD_FLAG="native"
   else
      THREAD_FLAG=""
   fi
AC_ARG_ENABLE(FULL_EVENT,
   [  --enable-FULL_EVENT     Experimental event notification (linux 2.2)],
   if test x$enable_FULL_EVENT = xyes; then 
	CFLAGS="$CFLAGS -DFULL_EVENT"
	THREADS_FLAG="native"
   fi
   )
AC_ARG_ENABLE(JDK_HOME,
   [  --enable-JDK_HOME       get JDK location from \$JDK_HOME],
   if test x$enable_JDK_HOME = xyes; then 
      JPATH="`echo $JDK_HOME`"
      if test x$JDK_HOME = x; then
         AC_MSG_ERROR([Could not find java in \$JDK_HOME.])
      fi
   fi
   )

#AC_ARG_ENABLE(DEBUG,
#   [  --enable-DEBUG          Print debugging info from SerialImp.c],
#   if test x$enable_DEBUG = xyes; then 
#      CFLAGS="$CFLAGS -DDEBUG"
#   fi
#   )
if test "$JPATH" = ""; then
   JPATH="`which java | sed s#/\bin\/java##`"
   if test x$JPATH = x; then
      AC_MSG_WARN([Could not find java in \$PATH.  Trying \$JDK_HOME.])
      if test x$JDK_HOME = x; then
         AC_MSG_ERROR([Could not find java in \$JDK_HOME.])
      fi
      JPATH="`echo $JDK_HOME`"
   fi
fi
JAVANATINC="\$(JPATH)/`cd $JPATH; find ./include -name jni_md.h|sed s#jni_md\\\\.h##|sed s#\\\\.\\\\/##`"
JAVAINCLUDE="\$(JPATH)/include"
JCLASSPATH="-classpath \$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar:\$(JPATH)/lib/jcl.jar:.:$CLASSPATH"
AC_OUTPUT(Makefile)
AC_ARG_ENABLE(SLOW,
   [  --enable-SLOW           Java queries that do nothing [default=no]], echo $enable_JDK_HOME, enable_SLOW="no")
   if test x$enable_SLOW = xyes; then 
echo 
echo -----------------------------
echo If the following generates errors it will not cause problems.  Please
echo email jarvi@ezlink.com if you do get errors.  This will be used to avoid
echo build problems in the future
echo
echo if your in a rush just type ^C
echo -----------------------------
cat > conftest.java << EOF

/* this may be usefull for getting around java cobwebs during build */

public class conftest {
	
	public static void main(String[[]] args) {
		switch(Integer.parseInt(args[[0]])){
			case 1:
				System.out.println(System.getProperty("java.library.path"));
				break;
			case 2:
				System.out.println(System.getProperty("os.version"));
				break;
			case 3:
				System.out.println(System.getProperty("os.arch"));
				break;
			case 4:
				System.out.println(System.getProperty("os.name"));
				break;
			case 5:
				System.out.println(System.getProperty("java.home"));
				break;
			case 6:
				System.out.println(System.getProperty("java.version"));
				break;
			case 7:
				System.out.println(System.getProperty("java.library.path"));
				break;
			case 8:
				System.out.println(System.getProperty("java.class.path"));
				break;
			case 9:
				System.out.println(System.getProperty("java.class.version"));
				break;
			default:
				break;
		}
	}
}
EOF
javac conftest.java
echo -n checking os.name  " "
OS_NAME=`java conftest 4`
echo $OS_NAME
echo -n checking os.arch   " "
OS_ARCH=`java conftest 3`
echo $OS_ARCH
echo -n checking os.version   " "
OS_VERSION=`java conftest 2`
echo $OS_VERSION
echo -n checking java.version   " "
JAVA_VERSION=`java conftest 6`
echo $JAVA_VERSION
echo -n checking java.home   " "
JAVA_HOME=`java conftest 5`
echo $JAVA_HOME
echo -n checking java.library.path   " "
JAVA_LIBRARY_PATH=`java conftest 7`
echo $JAVA_LIBRARY_PATH
echo -n checking java.class.path   " "
JAVA_CLASS_PATH=`java conftest 8`
echo $JAVA_CLASS_PATH
echo -n checking java.class.version   " "
JAVA_CLASS_VERSION=`java conftest 9`
echo $JAVA_CLASS_VERSION
rm -f conftest.java
rm -f conftest.class
   fi
